# urls2s3

./: LICENSE  pyproject.toml
tests/: test_kobo2sws.py
urls2s3/: datatypes.py  main.py  misc_functions.py
