[tool.poetry]
name = "urls2s3"
version = "0.1.0"
description = ""
authors = ["lemerchand <phoenix.scooter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
boto3 = "^1.24.61"
rich = "^12.5.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
